# Football_highlight_generator

./: .env  .env.example  .gitignore  LICENSE  README.md  config_debug.py  debug_config.py  fix_missing_attributes.py  pyproject.toml  requirements.txt  run_windows.bat  setup.bat  setup.py  test_config.py  test_mfcc_fix.py  test_model_dimensions.py  test_simple.py  test_upload_flow.py  verify_config.py
.streamlit/: config.toml
app/: main.py  streamlit_app.py
config/: config.py  init.py  test_config.py
config/model_configs/: 3dcnn_config.yaml  audio_config.yaml  multimodal_config.yaml
config/training_configs/: base_config.yaml  hyperparameters.yaml
experiments/multimodal_20260207_185517/: best_metrics.json  training_history.json
experiments/multimodal_20260207_185517/checkpoints/: best.pth  epoch_001.pth  epoch_002.pth  epoch_003.pth  epoch_004.pth  epoch_005.pth  epoch_006.pth  epoch_007.pth  latest.pth
scripts/: balance_dataset.py  preprocess_data.py  run_inference.py  test_training.py  train_model.py
src/: init.py  main_pipeline.py
src/audio_processing/: audio_processor.py
src/data_preparation/: data_augmentation.py  dataset_creator.py  generate_annotations.py
src/evaluation/: metrics_calculator.py
src/event_detection/: event_detector.py
src/feature_extraction/: __init__.py  audio_model.py  cnn3d_model.py  models.py  multimodal_fusion.py
src/highlight_generation/: highlight_generator.py
src/model_training/: init.py  trainer.py
src/utils/: file_utils.py  logger.py
src/video_processing/: preprocessor.py
src/visualization/: dashboard.py
